--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -11,6 +11,13 @@ sites:
     url: https://staff.dunice.net/
   - name: Vagdepo
     url: https://vagdepo.kz/
+  - name: Test Broken Site
+    url: https://thissitedoesnotexist.koj.co
+  - name: IPv6 test
+    url: forwardemail.net
+    port: 80
+    check: "tcp-ping"
+    ipv6: true
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
